// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Augmente 1`] = `
<div
  className="fr-highlight"
  style={
    Object {
      "border": "1px solid var(--yellow-moutarde-850)",
      "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
      "marginLeft": 0,
      "maxWidth": "fit-content",
      "paddingBottom": "1rem",
      "paddingRight": "2rem",
      "paddingTop": "1rem",
    }
  }
>
  <div
    className="flex items-center"
    data-test="PointsPotentiels"
  >
    <div
      className="relative whitespace-nowrap"
    >
      <span
        className="text-transparent"
      >
        Potentiel augmenté pour cette sous-action : 10 points
      </span>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
      >
        Potentiel augmenté pour cette sous-action : 10 points
      </div>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
      >
        Potentiel augmenté pour cette sous-action : 10 points
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Desactive 1`] = `
<div
  className="fr-highlight"
  style={
    Object {
      "border": "1px solid var(--yellow-moutarde-850)",
      "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
      "marginLeft": 0,
      "maxWidth": "fit-content",
      "paddingBottom": "1rem",
      "paddingRight": "2rem",
      "paddingTop": "1rem",
    }
  }
>
  <div
    className="flex items-center"
    data-test="PointsPotentiels"
  >
    <div
      className="relative whitespace-nowrap"
    >
      <span
        className="text-transparent"
      >
        Potentiel réduit pour cette sous-action : 0 point
      </span>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
      >
        Potentiel réduit pour cette sous-action : 0 point
      </div>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
      >
        Potentiel réduit pour cette sous-action : 0 point
      </div>
    </div>
    <button
      className="fr-link fr-link--icon-left fr-fi-settings-line fr-ml-10v"
      onClick={[Function]}
    >
      Personnaliser
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Non Personnalise 1`] = `
<div
  className="fr-highlight"
  style={
    Object {
      "border": "1px solid var(--yellow-moutarde-850)",
      "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
      "marginLeft": 0,
      "maxWidth": "fit-content",
      "paddingBottom": "1rem",
      "paddingRight": "2rem",
      "paddingTop": "1rem",
    }
  }
>
  <div
    className="flex items-center"
    data-test="PointsPotentiels"
  >
    <div
      className="relative whitespace-nowrap"
    >
      <span
        className="text-transparent"
      >
        Potentiel pour cette sous-action : 6,7 points
      </span>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
      >
        Potentiel pour cette sous-action : 6,7 points
      </div>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
      >
        Potentiel pour cette sous-action : 6,7 points
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Personnalise Et Editable 1`] = `
<div
  className="fr-highlight"
  style={
    Object {
      "border": "1px solid var(--yellow-moutarde-850)",
      "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
      "marginLeft": 0,
      "maxWidth": "fit-content",
      "paddingBottom": "1rem",
      "paddingRight": "2rem",
      "paddingTop": "1rem",
    }
  }
>
  <div
    className="flex items-center"
    data-test="PointsPotentiels"
  >
    <div
      className="relative whitespace-nowrap"
    >
      <span
        className="text-transparent"
      >
        Potentiel réduit pour cette sous-action : 3,3 points
      </span>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
      >
        Potentiel réduit pour cette sous-action : 3,3 points
      </div>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
      >
        Potentiel réduit pour cette sous-action : 3,3 points
      </div>
    </div>
    <button
      className="fr-link fr-link--icon-left fr-fi-settings-line fr-ml-10v"
      onClick={[Function]}
    >
      Personnaliser
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Personnalise Score Zero 1`] = `
<div
  className="fr-highlight"
  style={
    Object {
      "border": "1px solid var(--yellow-moutarde-850)",
      "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
      "marginLeft": 0,
      "maxWidth": "fit-content",
      "paddingBottom": "1rem",
      "paddingRight": "2rem",
      "paddingTop": "1rem",
    }
  }
>
  <div
    className="flex items-center"
    data-test="PointsPotentiels"
  >
    <div
      className="relative whitespace-nowrap"
    >
      <span
        className="text-transparent"
      >
        Potentiel réduit pour cette sous-action : 0 point
      </span>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
      >
        Potentiel réduit pour cette sous-action : 0 point
      </div>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
      >
        Potentiel réduit pour cette sous-action : 0 point
      </div>
    </div>
    <button
      className="fr-link fr-link--icon-left fr-fi-settings-line fr-ml-10v"
      onClick={[Function]}
    >
      Personnaliser
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Reduit 1`] = `
<div
  className="fr-highlight"
  style={
    Object {
      "border": "1px solid var(--yellow-moutarde-850)",
      "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
      "marginLeft": 0,
      "maxWidth": "fit-content",
      "paddingBottom": "1rem",
      "paddingRight": "2rem",
      "paddingTop": "1rem",
    }
  }
>
  <div
    className="flex items-center"
    data-test="PointsPotentiels"
  >
    <div
      className="relative whitespace-nowrap"
    >
      <span
        className="text-transparent"
      >
        Potentiel réduit pour cette sous-action : 3,3 points
      </span>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
      >
        Potentiel réduit pour cette sous-action : 3,3 points
      </div>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
      >
        Potentiel réduit pour cette sous-action : 3,3 points
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Reduit Deux Digits 1`] = `
<div
  className="fr-highlight"
  style={
    Object {
      "border": "1px solid var(--yellow-moutarde-850)",
      "boxShadow": "inset 0.25rem 0 0 0 var(--yellow-moutarde-850)",
      "marginLeft": 0,
      "maxWidth": "fit-content",
      "paddingBottom": "1rem",
      "paddingRight": "2rem",
      "paddingTop": "1rem",
    }
  }
>
  <div
    className="flex items-center"
    data-test="PointsPotentiels"
  >
    <div
      className="relative whitespace-nowrap"
    >
      <span
        className="text-transparent"
      >
        Potentiel réduit pour cette sous-action : 3,35 points
      </span>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
      >
        Potentiel réduit pour cette sous-action : 3,35 points
      </div>
      <div
        className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
      >
        Potentiel réduit pour cette sous-action : 3,35 points
      </div>
    </div>
  </div>
</div>
`;
